fixed settings secondary tab spacing

--- a/assets/styles/tabs.sass
+++ b/assets/styles/tabs.sass
@@ -92,13 +92,13 @@
     margin-top: 15px
 
     ul.navigation
-      margin: -18px 0 20px 0
       height: 40px
       line-height: 40px
       border-bottom: 1px solid #EAEAEA
 
       li
         display: inline-block
+        margin-right: 10px
 
         a
           color: #ACACAC
